--- a/style.css
+++ b/style.css
@@ -66,13 +66,48 @@
 
   background: rgba(255, 255, 255, 0.918);
 }
+.dropdown p i{
+  font-size: 10px;
+
+}
 .dropdown:hover {
   background: rgba(255, 255, 255, 0.836);
 }
-.dropdown a {
+.dropdown {
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
+.drop-list{
+position: absolute;
+top: 79%;
+left: 15%;
+background: white;
+z-index: 1;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+width: 15%;
+max-height: 270px;
+overflow-y: scroll;
+scroll-behavior: smooth;
+
+}
+.drop-visible{
+  display: none;
+}
+.drop-list  li{
+  list-style: none;
+}
+.drop-list li p{
+  font-size: 0.9rem;
+  font-weight: 500;
+  padding: 5px 5px;
+}
+.drop-list li:hover{
+  background: rgba(44, 81, 248, 0.795);
+
+}
+
+
 .search-place input {
   padding: 10px 40rem 10px 5px;
   font-weight: bolder;
@@ -324,6 +359,7 @@ color: black;
   z-index: 0;
   opacity: 0;
   overflow-y:scroll;
+  scroll-behavior: smooth;
 }
 .all-head-txt{
   display: flex;
